Add documentation for merging

--- a/content/api/0.index.md
+++ b/content/api/0.index.md
@@ -41,7 +41,7 @@ Hello, I am HTML.'
 ```
 
 ## APIs
-Currently, there's one API:
+Currently, there are two APIs:
 
 ### `POST https://api.pdfinch.com/pdf/create`
 You can POST HTML here, the content type is ignored, UTF-8 is assumed. You'll get an application/octet-stream back which you can treat as a PDF file.
@@ -50,7 +50,41 @@ Possible query string parameters:
 | Name         | Type   | Values     |
 |--------------|--------|------------|
 | MarginLeft   | int    | 0-999      |
-| MarginRightt | int    | 0-999      |
+| MarginRight  | int    | 0-999      |
 | MarginTop    | int    | 0-999      |
 | MarginBottom | int    | 0-999      |
 | Landscape    | bool   | true/false |
+
+Parameters are case-insensitive.
+
+### `POST https://api.pdfinch.com/pdf/merge`
+Send multiple HTML and parameter definitions, to append multiple pages. You can post with the content-type "multipart/form-data". The form element format is:
+
+| Name              | Type   | Values     |
+|-------------------|--------|------------|
+| d\[n\].Body         | string | HTML       |
+| d\[n\].MarginLeft   | int    | 0-999      |
+| d\[n\].MarginRight  | int    | 0-999      |
+| d\[n\].MarginTop    | int    | 0-999      |
+| d\[n\].MarginBottom | int    | 0-999      |
+| d\[n\].Landscape    | bool   | true/false |
+
+Where `n` is the 0-based index of your data. So if you want to post three HTML definitions, you can post something like this:
+
+```
+--X-YOUR-BOUNDARY
+Content-Disposition: form-data; name="d[0].body"
+<h1>Your-Html-String</h1>
+--X-YOUR-BOUNDARY
+Content-Disposition: form-data; name="d[0].landscape"
+true
+--X-YOUR-BOUNDARY
+Content-Disposition: form-data; name="d[1].body"
+<h1>Your-Second-Html</h1>
+--X-YOUR-BOUNDARY
+Content-Disposition: form-data; name="d[2].body"
+<h1>Your-Third-Html</h1>
+--X-YOUR-BOUNDARY
+Content-Disposition: form-data; name="d[2].landscape"
+true
+````
