--- a/content/1.index.md
+++ b/content/1.index.md
@@ -3,7 +3,7 @@ navTitle: 'Home'
 ---
 
 # PDFinch.com Documentation
-This is the documentation for the [PDFinch.com](https://www.pdfinch.com) site, where you can generate PDF files using our API at <code class="not-prose">https://api.pdfinch.com</code>.
+This is the documentation for the <a href="https://www.pdfinch.com">PDFinch.com</a> site, where you can generate PDF files using our API at <a href="https://api.pdfinch.com"><code class="not-prose">api.pdfinch.com</code></a>.
 
 ## Prerequisites
 To use our API, you need an account with enough credit on it and a set of API keys, see your [Dashboard](https://pdfinch.com/dashboard). 
@@ -12,6 +12,6 @@ To use our API, you need an account with enough credit on it and a set of API ke
 You pay in advance, a minimum amount of &euro; 5, then generate PDF files for &euro; 0.0075 (3/4th of a cent) per page.
 
 ## API
-Create a set of API keys under Developers -> API Keys, then you can perform HTTP calls to our API, or use the [.NET/C# Client](https://github.com/PDFinch/Client-NET). 
+Create a set of API keys under Developers -> API Keys, then you can perform HTTP calls to our API, or use the <a href="https://github.com/PDFinch/Client-NET">.NET/C# Client</a>. 
 
 See the [API documentation](/api) for details.
