Updated pricing text

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -9,7 +9,7 @@ This is the documentation for the <a href="https://www.pdfinch.com">PDFinch.com<
 To use our API, you need an account with enough credit on it and a set of API keys, see your [Dashboard](https://pdfinch.com/dashboard). 
 
 ## Orders
-You pay in advance, a minimum amount of &euro; 5, then generate PDF files for &euro; 0.0075 (3/4th of a cent) per page.
+You pay in advance, a minimum amount of &euro; 5, more detailed pricing information can be found [here](https://www.pdfinch.com/pricing).
 
 ## API
 Create a set of API keys under Developers -> API Keys, then you can perform HTTP calls to our API, or use the <a href="https://github.com/PDFinch/Client-NET">.NET/C# Client</a>. 
